Bundle the assets in the build

--- a/app.json
+++ b/app.json
@@ -21,6 +21,9 @@
                 "xxhdpi": "./assets/splashscreen.png",
                 "xxxhdpi": "./assets/splashscreen.png"
             }
-        }
+        },
+        "assetBundlePatterns": [
+            "./assets/*"
+        ]
     }
 }
