--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "16.3.1",
     "react-native": "v0.55",
     "react-redux": "^5.0.7",
+    "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0"
   }
 }
