--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native": "v0.55",
     "react-redux": "^5.0.7",
     "redux-persist": "^5.10.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "uuid": "^3.3.2"
   }
 }
