Update README to explain how to get the private key and set permissions to an empty array

--- a/app.json
+++ b/app.json
@@ -20,7 +20,9 @@
                 "xhdpi": "./assets/splashscreen.png",
                 "xxhdpi": "./assets/splashscreen.png",
                 "xxxhdpi": "./assets/splashscreen.png"
-            }
+            },
+            "permissions": [],
+            "versionCode": 2
         },
         "assetBundlePatterns": [
             "./assets/*"
