--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "test": "jest"
   },
   "jest": {
-    "preset": "jest-expo"
+    "preset": "jest-expo",
+    "collectCoverage": true,
+    "coverageReporters": ["json", "html"]
   },
   "dependencies": {
     "expo": "^27.0.1",
