--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "expo": "^27.0.1",
     "react": "16.3.1",
     "react-native": "v0.55",
+    "react-native-tags": "^1.5.0",
     "react-navigation": "^2.16.0",
     "react-redux": "^5.0.7",
     "redux-persist": "^5.10.0",
