--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-tags": "^1.5.0",
     "react-navigation": "^2.16.0",
     "react-redux": "^5.0.7",
+    "reduce-reducers": "^0.4.3",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
     "uuid": "^3.3.2"
