--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "expo": "^27.0.1",
     "react": "16.3.1",
     "react-native": "v0.55",
-    "react-native-tags": "^1.5.0",
+    "react-native-tags": "https://github.com/Ovski4/react-native-tags.git",
     "react-navigation": "^2.16.0",
     "react-redux": "^5.0.7",
     "reduce-reducers": "^0.4.3",
