--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ tests:
   stage: test
   script:
     - yarn
-    - yarn run test
+    - ./node_modules/jest/bin/jest.js
 
 manually-build:
   stage: build
