Publish (i still don't understand that setting)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,4 +19,4 @@ build:
   - yarn
   - yarn global add expo-cli
   - expo login -u $EXPO_USERNAME -p $EXPO_PASSWORD
-  - expo build:android --no-publish
+  - expo build:android
