--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "devDependencies": {
     "babel-core": "^6.26.3",
+    "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
+    "eslint": "^5.9.0",
+    "eslint-plugin-react": "^7.11.1",
     "jest": "^23.6.0",
     "jest-expo": "~27.0.0",
     "react-native-scripts": "1.14.0",
