--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,7 @@
         "plugin:react/recommended"
     ],
     "rules": {
+        "indent": ["error", 4],
         "no-unused-vars": [
             "error",
             {
