--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,15 @@
         "plugin:react/recommended"
     ],
     "rules": {
-        "indent": ["error", 4],
+        "indent": [
+            "error", 4
+        ],
+        "no-multiple-empty-lines": [
+            "error",
+            {
+                "max": 1
+            }
+        ],
         "no-unused-vars": [
             "error",
             {
